...
        let {members, isOwner, extraData, type} = this.state;
        return (
            <View>
            {isOwner && type !== 'view'? 
            <View style = {[s.button, s.borderBottom]}>
                <Button
                    testID = 'inviteMemberButton'
                    title = 'Invite a new member'
                    onPress = {() => {
                        AlertIOS.prompt(
                            'Enter user\'s email',
                            'Enter user\'s email to invite',
                            [
...

        return (
            <View>
            {isOwner && type !== 'view'? 
            <View style = {[s.button, s.borderBottom]}>
                <Button
                    testID = 'createEventButton'
                    title = 'Create a new event'
                    onPress = {this._onCreateEvent.bind(this)}
                />
            </View> : null}
            {/* <View style = {[s.hint, s.borderBottom]}>
                <Text style = {cs.h5}>Tap to select a event you want to attend</Text>
...
        return (
            <SwipeOut
                right = {button}
                autoClose = {true}
            >
            <TouchableWithoutFeedback
                testID = 'memberButton'
                onPress = {() => this.props.navigation.push('ProfileDetail', {
                    userId: profile.userId
                })}
            >
            <View style = {[s.member, s.borderBottom]}>
                <Text style = {cs.normalText}>
...
                    onDateChange = {this._onProjectEndDateChange.bind(this)}
                    mode = 'date'
                />
            </View>
            <View style = {[s.button, s.borderTop, s.borderBottom]}>
                <Button
                    testID = 'endDatePicker'
                    title = 'Submit'
                    onPress = {() => {
                        this._onUpdateProject({
                            projectEndDate: tempProjectEndDate,
                        });
                        this.setState({showEndDatePicker: false});
...
                    onDateChange = {this._onProjectStartDateChange.bind(this)}
                    mode = 'date'
                />  
            </View>
            <View style = {[s.button, s.borderTop, s.borderBottom]}>
                <Button
                    testID = 'startDatePicker'
                    title = 'Submit'
                    onPress = {() => {
                        this._onUpdateProject({
                            projectStartDate: tempProjectStartDate,
                        });
                        this.setState({showStartDatePicker: false})
...
        let {isOwner, type, profile} = this.state;
        return (
        <View>
        {isOwner && type !== 'view' ? 
            <View style = {s.button}>
                <Button
                    testID = 'deleteProjectButton'
                    title = 'Delete Project'
                    onPress = {() => {
                        AlertIOS.alert(
                            'Delete Project',
                            'Are you sure you want to delete this project?',
                            [
...
                    <RefreshControl
                        onRefresh = {() => this._onRefresh(true)}
                        refreshing = {isRefreshing}
                    />}
			>
            <TouchableWithoutFeedback
                testID = 'projectNameButton'
                onPress = {() => this.props.navigation.push('EditProject', {
                    project, profile, refresh: this._onRefresh.bind(this),
                })}
                disabled = {!isOwner || type === 'view'}
            >
            <View style = {s.title}>
...
            {/* start date */}
            <TouchableWithoutFeedback
                onPress = {() => this.setState({
                    showStartDatePicker: ~showStartDatePicker
                })}
                disabled = {!isOwner || type === 'view'}
                testID = 'projectStartDateButton'
            >
                <View style = {[s.listContainer, s.borderBottom]}>
                <View style = {s.contentContainer}>
                    <Text style = {cs.normalText}>Start Date</Text>
                    <Text style = {cs.h5}>{projectStartDate.toDateString()}</Text>
                </View>
                </View>
            </TouchableWithoutFeedback>
            {showStartDatePicker ? startDatePicker : null}
            {/* end date */}
            <TouchableWithoutFeedback
                testID = 'projectEndDateButton'
                onPress = {() => this.setState({
                    showEndDatePicker: ~showEndDatePicker
                })}
                disabled = {!isOwner || type === 'view'}
            >
                <View style = {[s.listContainer, s.borderBottom]}>
...
            {members}
            {/* Event */}
            <TouchableWithoutFeedback
                onPress = {() => this.setState({
                    showEvents: ~showEvents
                })}
                testID = 'eventButton'
            >
                <View style = {[s.listContainer, s.borderBottom]}>
                <View style = {s.contentContainer}>
                    <Text style = {cs.normalText}>Events</Text>
                    {eventsArrow}
                </View>
...
            {/* More */}
            {type === 'view' ? null :
                <TouchableWithoutFeedback
                    onPress = {() => this.setState({
                        showMore: ~showMore
                    })}
                    testID = 'moreButton'
                >
                    <View style = {[s.listContainer, s.borderBottom]}>
                    <View style = {s.contentContainer}>
                        <Text style = {cs.normalText}>More</Text>
                        {moreArrow}
                    </View>
...
