...
						{agendaIcon}
						<Text style = {[buttonColor.agenda, {paddingTop:4,fontSize:10}]}>
						Agenda</Text>
						</View>
					</TouchableWithoutFeedback>
					<TouchableWithoutFeedback 
						testID = 'projectButton'
						onPress = {() => this._switchContent('Project')}
					>
						<View style = {s.switchButton}>
						{projectIcon}
						<Text style = {[buttonColor.project, {paddingTop:4,fontSize:10}]}>
						Project</Text>
...
						{invitationIcon}
						<Text style = {[buttonColor.invitation, {paddingTop:4,fontSize:10}]}>
						Invitation</Text>
						</View>
					</TouchableWithoutFeedback>
					<TouchableWithoutFeedback 
						testID = 'profileButton'
						onPress = {() => this._switchContent('Profile')}
					>
						<View style = {s.switchButton}>
						{profileIcon}
						<Text style = {[buttonColor.profile, {paddingTop:4,fontSize:10}]}>
						Me</Text>
...
